fixed random gaps between tooltip and borders caused by 'rotate(45deg) + minor corrections regarding tooltip's behaviour'

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -117,6 +117,9 @@ body{
 
 .characterBox{
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   opacity: 0;
   width: 312px;
   height: 312px;
@@ -128,14 +131,25 @@ body{
 }
 
 .portraitWrapper{
-  position: relative;
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 101%;
+  height: 101%;
+  overflow: hidden;
+}
+
+.characterImageWrapper{
+  position: absolute;
+  width: 99%;
+  height: 99%;
   overflow: hidden;
 }
 
 .chararcterTooltip{
   display: flex;
+  opacity: 0;
   align-items: center;
   justify-content: center;
   position: absolute;
@@ -234,9 +248,17 @@ body{
     lightup-1 .3s linear 1.3s forwards;
 }
 
+#characterTooltip-1__active{
+  animation: activate-tooltip .3s linear 1.3s forwards
+}
+
 #characterBox-2__active{
   animation: unfold-2 .5s ease-in-out .5s forwards,
     lightup-2 .3s linear 1.6s forwards;
+}
+
+#characterTooltip-2__active{
+  animation: activate-tooltip .3s linear 1.6s forwards
 }
 
 #characterBox-3__active{
@@ -244,9 +266,18 @@ body{
     lightup-3 .3s linear 1.9s forwards;
 }
 
+#characterTooltip-3__active{
+  animation: activate-tooltip .3s linear 1.9s forwards
+}
 
 
 /*!Keyframes*/
+
+@keyframes activate-tooltip{
+  100%{
+    opacity: 1;
+  }
+}
 
 @keyframes lightup-1 {
   99%{
@@ -288,10 +319,6 @@ body{
 }
 
 @keyframes arrowLeft-unfold {
-  0%{
-
-  }
-
   35%{
     margin-right: 180px;
     transform: rotateY(0deg);
